@@ -514,6 +514,7 @@ Global
 		{26232ADD-2DA4-43CD-BE50-34A319BBFFB8}.Release-4.0|x86.ActiveCfg = Release-4.0|x86
 		{26232ADD-2DA4-43CD-BE50-34A319BBFFB8}.Release-4.0|x86.Build.0 = Release-4.0|x86
 		{C19EF7DF-2F9D-4D4C-965D-AD714DCBB323}.Debug|x64.ActiveCfg = Debug|x64
+		{C19EF7DF-2F9D-4D4C-965D-AD714DCBB323}.Debug|x64.Build.0 = Debug|x64
 		{C19EF7DF-2F9D-4D4C-965D-AD714DCBB323}.Debug|x86.ActiveCfg = Debug|x86
 		{C19EF7DF-2F9D-4D4C-965D-AD714DCBB323}.Debug|x86.Build.0 = Debug|x86
 		{C19EF7DF-2F9D-4D4C-965D-AD714DCBB323}.Debug-4.0|x64.ActiveCfg = Debug-4.0|x64
